# urirun-connector-email

./: CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml
examples/: README.md  lenovo-invoice-export.yaml  quickstart.sh  triage-inbox.sh
tests/: test_contracts.py  test_email.py
urirun_connector_email/: __init__.py  connector.manifest.json  contracts.py  core.py  thunderbird.py
