[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-email"
version = "0.3.0"
description = "Email (IMAP/SMTP/Thunderbird) connector for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = ["urirun>=0.4.14"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
urirun-email = "urirun_connector_email.core:main"

[project.entry-points."urirun.bindings"]
email = "urirun_connector_email.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_email*"]

[tool.setuptools.package-data]
urirun_connector_email = ["connector.manifest.json"]
